0.9.0
  * speed up read/write/getLine operations, save memory
  * accept client definition in server configuration file
  * add option to disable the warning on connection time-out (was always disabled)
  * do not fail to recover when last line of journal is incomplete
  * support listing/restoring multiple clients at once
  * support '*' at end of client name to support multiple selection
  * add options to restore as links, hard and symbolic
  * do not check corrupted data twice
  * less noise in verbose mode

0.8.2 - 2008-04-04 (SVN r418)
  * quick fix restoration of paths containing spaces

0.8.1 - 2008-03-17 (SVN r402)
  * fix list corruption when no space left on backup device

0.8 - 2008-03-07 (SVN r377)
  * list/restore: properly handle given date, accept negative date for relative time
  * restore: restore uid/gid, mtime and permissions for files, dirs and pipes
  * new subset concept for multi-backup clients (typically multi-boot)
  * new fix option to do nothing else than fix the DB (and update it if necessary)
  * new DB lists, per client, to dramatically improve speed when listing
  * report progress where relevant (big file copy, list merging)
  * DB creation must be required explicitely via initialize option
  * accept units (kB, MiB, ...) for file size in filters
  * add filter on permissions

0.7.0 - 2008-02-19 (SVN r326)
  * db check can be run in the background and checks for corrupted data
  * db scan collects missing/corrupted/obsolete items and updates DB and list of missing items accordingly
  * parsing adds reported missing/corrupted items
  * verbosity is now managed centrally

0.6.1 - 2008-02-08 (SVN r278)
  * re-order configuration items in original file order

0.6 - 2008-02-05 (SVN r266)
  * NFS mounts now time out, causing client backup to properly abort
  * CVS parser completed
  * Subversion parser completed
  * improved documentation
  * unified configuration files parsing
  * improved test framework, now supports 'make -j'
