@@ -1,7 +1,9 @@
 0.9.0
-  * speed up read/write/getLine operations, save memory
+  * change default file from /etc/hbackup/hbackup.conf to /etc/hbackup/config
+  * speed up read/write/getLine/copy operations, save memory
   * accept client definition in server configuration file
   * add option to disable the warning on connection time-out (was always disabled)
+  * add option to print copy errors only the first time they occur
   * do not fail to recover when last line of journal is incomplete
   * support listing/restoring multiple clients at once
   * support '*' at end of client name to support multiple selection
